--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,8 @@ dependencies = [
   "numpy==1.23.5",
   "h5py==3.9.0",
   "tqdm==4.66.1",
-  "sympy==1.12"
+  "sympy==1.12",
+  "scipy==1.15.1"
 ]
 
 [project.scripts]
