--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,13 +14,13 @@ classifiers = [
 ]
 
 dependencies = [
-  "matplotlib=>3.7.3",
-  "matplotlib-inline=>0.1.6",
-  "numpy=>1.23.5",
-  "h5py=>3.9.0",
-  "tqdm=>4.66.1",
-  "sympy=>1.12",
-  "scipy=>1.15.1"
+  "matplotlib>=3.7.3",
+  "matplotlib-inline>=0.1.6",
+  "numpy>=1.23.5",
+  "h5py>=3.9.0",
+  "tqdm>=4.66.1",
+  "sympy>=1.12",
+  "scipy>=1.15.1"
 ]
 
 [project.scripts]
