--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,8 @@ distance_test = "ce_sens.pe_test.distance:check_distance"
 mchirp_test = "ce_sens.pe_test.mchirp:check_mchirp"
 write_priors = "ce_sens.pe_test.priors:write_priors"
 ks_test = "ce_sens.pe_test.ks_test:ks_test"
+bound_check = "ce_sens.pe_test.bound_check:bound_check"
+
 
 [project.urls]
 "Homepage" = "https://github.com/aleynaakyuz/ce_sens"
